# TianshuEngine

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TODO.md
.github/workflows/: build-all-platforms.yml  build.yml  ci.yml  release.yml
assets/shaders/: deferred_lighting_frag.glsl  gbuffer_frag.glsl  pbr_frag.glsl  vert.glsl
docs/: architecture.md  getting_started.md  physics.md  rendering.md  scripting.md
editor/: CMakeLists.txt  animation_editor.cpp  animation_editor.h  content_browser.cpp  content_browser.h  editor_camera.cpp  editor_camera.h  editor_commands.cpp  editor_commands.h  editor_selection.cpp  editor_selection.h  main.cpp  main_debug.cpp  main_simple.cpp  material_editor.cpp  material_editor.h  scene_gizmo.cpp  scene_gizmo.h  test_app.cpp  test_basic.cpp  test_camera.cpp  test_imgui.cpp  test_minimal.cpp  test_renderer.cpp  test_scene.cpp  test_window.cpp
editor/core/: command_system.cpp  command_system.h  editor_state.cpp  editor_state.h  entity_picker.cpp  entity_picker.h  gizmo.cpp  gizmo.h
editor/panels/: ai_panel.cpp  ai_panel.h  animation_editor_panel.cpp  animation_editor_panel.h  asset_browser_panel.cpp  asset_browser_panel.h  console_panel.cpp  console_panel.h  inspector_panel.cpp  inspector_panel.h  material_editor_panel.cpp  material_editor_panel.h  profiler_panel.cpp  profiler_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  settings_panel.cpp  settings_panel.h  status_bar.cpp  status_bar.h  terrain_editor_panel.cpp  terrain_editor_panel.h  toolbar_panel.cpp  toolbar_panel.h  ui_editor_panel.cpp  ui_editor_panel.h  viewport_panel.cpp  viewport_panel.h
editor/visual_script/: visual_script.cpp  visual_script.h
engine/: CMakeLists.txt
engine/ai/: ai_asset_generator.cpp  ai_asset_generator.h  ai_code_generator.cpp  ai_code_generator.h  ai_config.h  ai_manager.cpp  ai_manager.h  behavior_tree.cpp  behavior_tree.h  decision_tree.cpp  decision_tree.h  navigation.cpp  navigation.h
engine/audio/: audio_engine.cpp  audio_engine.h  audio_listener.cpp  audio_listener.h  audio_source.cpp  audio_source.h  audio_system.cpp  audio_system.h
engine/core/: application.cpp  application.h  debug_console.cpp  debug_console.h  event.h  input.cpp  input.h  log.cpp  log.h  memory_allocator.cpp  memory_allocator.h  memory_pool.h  plugin_system.cpp  plugin_system.h  profiler.cpp  profiler.h  serialization.cpp  serialization.h  window.cpp  window.h
engine/ecs/: component.h  components.h  entity.cpp  entity.h  system.h
engine/math/: math_types.cpp  math_types.h
engine/physics/: cloth.cpp  cloth.h  collider.cpp  collider.h  debug_draw.cpp  debug_draw.h  destruction.cpp  destruction.h  joint.cpp  joint.h  jolt_physics.cpp  jolt_physics.h  physics_material.cpp  physics_material.h  physics_system.cpp  physics_system.h  physics_world.cpp  physics_world.h  ragdoll.cpp  ragdoll.h  rigid_body.cpp  rigid_body.h  spatial_partition.cpp  spatial_partition.h  vehicle.cpp  vehicle.h
engine/platform/: platform.cpp  platform.h
engine/platform/android/: android_platform.cpp  android_platform.h
engine/platform/web/: web_platform.cpp  web_platform.h
engine/renderer/: animation.cpp  animation.h  animation_system.cpp  animation_system.h.bak  atmosphere.cpp  atmosphere.h  bloom.cpp  bloom.h  buffer.cpp  buffer.h  buffer.h.bak  camera.cpp  camera.h  camera.h.bak  cloud_renderer.cpp  cloud_renderer.h  culling.cpp  culling.h.bak  decal_system.cpp  decal_system.h  decals.cpp  decals.h  deferred_pipeline.cpp  deferred_pipeline.h  deferred_pipeline.h.bak  deferred_renderer.cpp  deferred_renderer.h  deferred_renderer.h.bak  depth_of_field.cpp  depth_of_field.h  descriptor_set.cpp  descriptor_set.h  descriptor_set.h.bak  font_renderer.cpp  font_renderer.h  frustum_cull.cpp  frustum_cull.h.bak  glass_renderer.cpp  glass_renderer.h  global_illumination.cpp  (+99 more)
engine/renderer/vulkan/: device.cpp  device.h  fwd.h  instance.cpp  instance.h  swapchain.cpp  swapchain.h
engine/resource/: asset_pipeline.cpp  asset_pipeline.h  resource_manager.cpp  resource_manager.h  resource_streamer.cpp  resource_streamer.h
engine/scene/: prefab.cpp  prefab.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  transform.cpp  transform.h
engine/script/: script_component.h  script_engine.cpp  script_engine.h  script_system.cpp  script_system.h
engine/ui/: imgui_integration.cpp  imgui_integration.h  theme.h  ui_canvas.cpp  ui_canvas.h  ui_layout.h  ui_manager.cpp  ui_manager.h  ui_system.cpp  ui_system.h  ui_theme.cpp  ui_theme.h  ui_widgets.cpp  ui_widgets.h  ui_window.cpp  ui_window.h  widgets.cpp  widgets.h
examples/animation_demo/: main.cpp
examples/basic_cube/: main.cpp
examples/deferred_rendering_demo/: main.cpp
examples/ecs_demo/: main.cpp
examples/lighting_demo/: main.cpp
examples/minimal_demo/: main.cpp
examples/particle_effects/: main.cpp
examples/pbr_materials/: main.cpp
examples/physics_demo/: main.cpp
examples/platformer_2d/: main.cpp
examples/post_processing_demo/: main.cpp
examples/puzzle_game/: main.cpp
examples/racing_game/: main.cpp
examples/scripting_demo/: main.cpp
examples/scripting_demo/scripts/: bounce.lua  rotate.lua
examples/space_shooter/: main.cpp
examples/standalone_demo/: main.cpp
examples/third_person_camera/: main.cpp
examples/ui_demo/: main.cpp
runtime/: CMakeLists.txt  main.cpp  main_minimal.cpp
scripts/: README.md  build.bat  build_android.ps1  build_engine.bat  build_web.ps1  compile_shaders.bat  compile_shaders.sh  create_installer.ps1  generate_assets.ps1  install_build_tools.bat  install_build_tools.ps1  install_compiler.bat  install_compiler.ps1  package_engine.bat  package_engine.ps1  release.bat
